--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1>Data Visualisation</h1>
 
     <h2>DC Scatter Plot</h2>
-
+    <img src="kenza.png"></img>
     <div>
         <h3>Transactions Per Date, colour coded by person</h3>
         <div id="scatter-plot"></div>
